# fastapi-starter

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  database.db  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
migrations/: env.py
migrations/versions/: 035bf90921c4_make_user_model_email_field_unique.py  4d41fdf13817_add_user.py  91522045e435_add_user.py  ac7a14c4c5aa_create_user_model_revise.py  ad11e5702eca_add_user.py  c60c8c39a550_create_user_model.py  fff3e387bed8_initial_migrations.py
src/: main.py  routers.py
src/accounts/: crud.py  dependencies.py  models.py  oauth2.py  repository.py  schemas.py  services.py
src/accounts/api/: admin_controller.py  auth.py  auth_controller.py  router.py
src/api/: health_check_controller.py  router.py
src/core/: config.py  crud_base.py
src/core/cache/: __init__.py  base.py  cache_manager.py  cache_tag.py  redis_backend.py
src/core/db/: __init__.py  connector.py  helpers.py  raw_db.py
src/core/decorators/: check_permission.py  lock_acquire.py
src/core/dependencies/: __init__.py  auth_dependency.py  authentication.py  get_current_user.py  param_dependency.py  query_param.py  tenant_scope.py
src/core/di/: container.py
src/core/error/: codes.py  exceptions.py  format_error.py
src/core/helpers/: enums.py  json_encoder.py  paginated_response.py  type_choices.py
src/core/logger/: __init__.py  logger.py
src/core/middleware/: __init__.py  error_handler.py  error_handler_middleware.py  maintenance.py  renderer.py  (+2 more)
src/db/: db_check.py  db_session.py
src/scripts/: create_db.sh  create_super_user.py  create_test_db.sh  prestart.sh
src/seeders/: __init__.py  create_super_user.py  main.py  user_data.py  users.py
src/tests/: conftest.py
src/worker/: __init__.py  celery_app.py  send_mail.py
(+45 files in other folders)
