[project]
name = "fastapi-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.115.14",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "python-ulid>=3.0.0",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "mypy>=1.16.1",
]
